update separate css files

--- a/project.html
+++ b/project.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Projects</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/project.css">
 </head>
 <body>
     <header>
@@ -25,16 +26,17 @@
     <main>
         <section>
             <h2>Featured Projects</h2>
-            
-            <!-- Project 1 -->
-            <article>
+            <section class="projects-grid">
+                <article>
+                    <!-- Project 1 -->
+                    <article>
                 <h3>3D models</h3>
                 <img src="image/Screenshot 2025-10-17 103850.png" alt="Portfolio website screenshot" width="300">
                 <p>A <strong>3D model</strong> and <em>3D model</em>.</p>
                 <p><b>Technologies:</b> Blender, Maya, 3ds Max</p>
                 
             </article>
-
+        </section>
             <br>
 
             <!-- Project 2 -->
