update part4 Aesthetics and Usability

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/about.css">
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <h1>About Me</h1>
     </header>
@@ -15,14 +16,14 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html" aria-current="page">About</a></li>
             <li><a href="Project.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="experiments.html">Experiments</a></li>
         </ul>
     </nav>
 
-    <main>
+    <main id="main-content">
         <section class="profile-section">
             <!-- Simple img tag - no picture wrapper needed -->
             <img src="image/simpson-v2.webp" 
