--- a/experiments.html
+++ b/experiments.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/experiments.css">
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <h1>HTML Tag Experiments</h1>
     </header>
@@ -18,11 +19,11 @@
             <li><a href="about.html">About</a></li>
             <li><a href="Project.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="experiments.html">Experiments</a></li>
+            <li><a href="experiments.html" aria-current="page">Experiments</a></li>
         </ul>
     </nav>
 
-    <main>
+    <main id="main-content">
         <section>
             <h2>1. Picture Element Demo</h2>
             <picture>
