--- a/project.html
+++ b/project.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/project.css">
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <h1>My Projects</h1>
         <p>A showcase of my work and accomplishments</p>
@@ -17,13 +18,13 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="Project.html">Projects</a></li>
+            <li><a href="Project.html" aria-current="page">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="experiments.html">Experiments</a></li>
         </ul>
     </nav>
 
-    <main>
+    <main id="main-content">
         <section>
             <h2>Featured Projects</h2>
             <section class="projects-grid">
