--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/contact.css">">
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <h1>Contact Me</h1>
     </header>
@@ -17,12 +18,12 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="Project.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" aria-current="page">Contact</a></li>
             <li><a href="experiments.html">Experiments</a></li>
         </ul>
     </nav>
 
-    <main>
+    <main id="main-content">
         <section>
             <h2>Get In Touch</h2>
             
