--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </style>
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <h1>Jeff Huhtua</h1>
         <p><strong>Computer Science Student</strong> | <em>Aim to develop new pipeline for AI Applications</em></p>
@@ -43,7 +44,7 @@
     
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" aria-current="page">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="Project.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -51,7 +52,7 @@
         </ul>
     </nav>
 
-    <main>
+    <main id="main-content">
         <section>
             <h2>Welcome to My Portfolio</h2>
                 <p>Hi! I'm a <b>computer science student</b> passionate about building 
@@ -63,7 +64,7 @@
                 This is the custom semantic element.
             </info-box>
             
-            <button type="button">View My Projects</button>
+            <button type="button" onclick="window.location.href='Project.html'">View My Projects</button>
         </section>
 
         <section>
