--- a/experiments.html
+++ b/experiments.html
@@ -50,7 +50,7 @@
         <section>
             <h2>3. Video Player</h2>
             <video width="400" controls>
-                <source src="video/vlm_test1.mp4" type="video/mp4">
+                <source src="video/resized.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <p>Video player</p>
