--- a/about.html
+++ b/about.html
@@ -19,14 +19,13 @@
             <li><a href="about.html" aria-current="page">About</a></li>
             <li><a href="Project.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="experiments.html">Experiments</a></li>
         </ul>
     </nav>
 
     <main id="main-content">
         <section class="profile-section">
             <!-- Simple img tag - no picture wrapper needed -->
-            <img src="image/simpson-v2.webp" 
+            <img src="image/selfie.webp" 
                  alt="Jeff Huhtua, computer science graduate student at UC San Diego, professional portrait"
                  loading="eager">
             
