--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Computer Science student portfolio showcasing projects and skills">
-    <meta name="author" content="Jeff Huhtua">
+    <meta name="author" content="Jingcheng Li">
     <title>My Portfolio - Home</title>
     
     <!-- link tag for future CSS -->
@@ -35,7 +35,7 @@
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
-        <h1>Jeff Huhtua</h1>
+        <h1>Jingcheng Li</h1>
         <p><strong>Computer Science Student</strong> | <em>Aim to develop new pipeline for AI Applications</em></p>
     </header>
     
@@ -48,7 +48,6 @@
             <li><a href="about.html">About</a></li>
             <li><a href="Project.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="experiments.html">Experiments</a></li>
         </ul>
     </nav>
 
@@ -78,8 +77,8 @@
     </main>
 
     <footer>
-        <p>Contact: <a href="mailto:your.email@example.com">jeff.huhtua@gmail.com</a></p>
-        <p>&copy; 2025 Jeff Huhtua. All rights reserved.</p>
+        <p>Contact: <a href="jingchengli33@gmail.com">My Email</a></p>
+        <p>&copy; 2025 Jingcheng Li. All rights reserved.</p>
     </footer>
 
     <!-- noscript tag -->
