change email and name

--- a/about.html
+++ b/about.html
@@ -26,11 +26,11 @@
         <section class="profile-section">
             <!-- Simple img tag - no picture wrapper needed -->
             <img src="image/selfie.webp" 
-                 alt="Jeff Huhtua, computer science graduate student at UC San Diego, professional portrait"
+                 alt="Jingcheng Li, computer science graduate student at UC San Diego, professional portrait"
                  loading="eager">
             
             <div>
-                <h2>Hello! I'm Jeff Huhtua</h2>
+                <h2>Hello! I'm Jingcheng Li</h2>
                 <p>I'm a computer science student at UC San Diego, focused on machine learning and software engineering. 
                    As an efficient and detail-oriented researcher, I thrive on solving complex technical challenges. 
                    My work combines cutting-edge machine learning techniques with practical applications in computer vision and graphics.</p>
@@ -66,7 +66,8 @@
     </main>
 
     <footer>
-        <p>Contact: <a href="mailto:your.email@example.com">jeff.huhtua@gmail.com</a></p>
+        <p>Contact: <a href="jingchengli33@gmail.com">My Email</a></p>
+        <p>&copy; 2025 Jingcheng Li. All rights reserved.</p>
     </footer>
 </body>
 </html>
