--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
         <section>
             <h3>Other Ways to Reach Me</h3>
             <ul>
-                <li>Email: jeff.huhtua@gmail.com</li>
+                <li>Email: jingchengli33@gmail.com</li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Jeff Huhtua</p>
+        <p>&copy; 2025 Jingcheng Li</p>
     </footer>
 </body>
 </html>
