--- a/project.html
+++ b/project.html
@@ -129,8 +129,8 @@
     </main>
 
     <footer>
-        <p>Contact: <a href="mailto:your.email@example.com">jeff.huhtua@gmail.com</a></p>
-        <p>&copy; 2025 Jeff Huhtua. All rights reserved.</p>
+        <p>Contact: <a href="jingchengli33@gmail.com">My Email</a></p>
+        <p>&copy; 2025 Jingcheng Li. All rights reserved.</p>
     </footer>
 
     <noscript>
