update CV and corresponding page

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="image/full_time_resume_1021_jingcheng.pdf" title="My CV">
+                        <a href="image/CV.pdf" title="My CV">
                             <img src="https://api.iconify.design/academicons/cv.svg" alt="CV Icon">
                         </a>
                     </li>
@@ -52,7 +52,7 @@
             
             <div>
                 <h2>Hello! I'm Jingcheng Li</h2>
-                <p>I'm a computer science student at UC San Diego, focused on machine learning and software engineering. 
+                <p>I'm a computer science student at UC San Diego, focused on 3D Vision and Multimodal AI. 
                    As an efficient and detail-oriented researcher, I thrive on solving complex technical challenges. 
                    My work combines cutting-edge machine learning techniques with practical applications in computer vision and graphics.</p>
             </div>
@@ -73,6 +73,8 @@
             <div>
                 <h4>UC San Diego</h4>
                 <p>M.S. Computer Science - Expected 2026</p>
+                <h4>UC Irvine</h4>
+                <p>B.S. Computer Science - 2020-2024</p>
             </div>
         </section>
     
