change project style and print mistake

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
     </main>
 
     <footer>
-        <p>Contact: <a href="jingchengli33@gmail.com">My Email</a></p>
+        <p>Contact: <a href="mailto:jingchengli33@gmail.com">My Email</a></p>
         <p>&copy; 2025 Jingcheng Li. All rights reserved.</p>
     </footer>
 </body>
