--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/contact.css">">
+    <link rel="stylesheet" href="styles/contact.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
