--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <h1>Jingcheng Li</h1>
-        <p><strong>Computer Science Student</strong> | <em>Aim to develop new pipeline for AI Applications</em></p>
     </header>
     
     <hello-world id="greeting"></hello-world>
@@ -70,7 +69,7 @@
     </main>
 
     <footer>
-        <p>Contact: <a href="jingchengli33@gmail.com">My Email</a></p>
+        <p>Contact: <a href="mailto:jingchengli33@gmail.com">My Email</a></p>
         <p>&copy; 2025 Jingcheng Li. All rights reserved.</p>
     </footer>
 
