change index page print mistake

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <article>
                 <h3>3D Object Asset Rigging</h3>
                 <p>We aim to develop a fully automated pipeline that can take a text to 3D monolithic mesh to a rigged and textured 3D object.</p>
-                <a href="Project.html">Learn more</a>
+                <a href="project.html">Learn more</a>
             </article>
         </section>
     </main>
